@@ -3,7 +3,6 @@ package md.mirrerror.discordutils.commands.discordutilsadmin;
 import md.mirrerror.discordutils.Main;
 import md.mirrerror.discordutils.cache.DiscordUtilsUsersCacheManager;
 import md.mirrerror.discordutils.commands.SubCommand;
-import md.mirrerror.discordutils.config.settings.BotSettings;
 import md.mirrerror.discordutils.config.messages.Message;
 import md.mirrerror.discordutils.models.DiscordUtilsUser;
 import md.mirrerror.discordutils.utils.Validator;
@@ -13,8 +12,6 @@ import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class ForceUnlink implements SubCommand {
@@ -54,7 +51,7 @@ public class ForceUnlink implements SubCommand {
 
     @Override
     public List<String> getAliases() {
-        return Collections.unmodifiableList(Arrays.asList("funlink", "fulink", "forceulink"));
+        return List.of("funlink", "fulink", "forceulink");
     }
 
     @Override
